<resources>
    <string name="app_name">QuizTaker</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="help_text_one">This is a reusable and scalable quiz application. Administrators can create and delete quizzes and normal users can complete them.</string>
    <string name="help_text_two">Any help or questions about the QuizTaker application, please refer to the link below. </string>
    <string name="about_us_text">We are a group of CSULB students who are aiming to improve quality learning. With QuizTaker\'s ease-of-use and accessibility, we believe we have achieved that.</string>
    <string name="Developers">DEVELOPERS</string>
    <string name="kurt">Kurt Tito</string>
    <string name="konstantin">Konstantin Zlatkov</string>
    <string name="jeffrey">Jeffrey Heng</string>
    <string name="justin">Justin Le</string>
    <string name="underscore">--------------------------------------------</string>
    <string name="github_link">https://github.com/zlatkovtv/453-QuizTaker</string>

    <string name="quiz_list_title">Take a look at our quizzes</string>

    <string name="quiz_results_bad">Oops! That could have gone better...</string>
    <string name="quiz_results_ok">That was OK, but we feel like there is room for improvement</string>
    <string name="quiz_results_good">That was impressive!</string>
    <string name="quiz_results_excellent">Woah! You got everything correct!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register">New user? Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="current_password">CURRENT PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password_caps">CONFIRM PASSWORD</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_lowercase">Cancel</string>
    <string name="enter_your_quiz_name">Enter Your Quiz Name:</string>
    <string name="save">SAVE</string>
    <string name="questions_and_answers_header">Please fill in questions and answers below:</string>
    <string name="question">Question</string>
    <string name="_1">1</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="false_answer_1">False Answer 1</string>
    <string name="false_answer_2">False Answer 2</string>
    <string name="false_answer_3">False Answer 3</string>
    <string name="quit">QUIT</string>
    <string name="next">NEXT</string>
    <string name="textview">TextView</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="delete_quiz">Delete Quiz</string>
</resources>
