<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/changeProfileButton"
            android:icon="@drawable/ic_change_profile"
            android:title="@string/change_profile"
            />
        <item
            android:id="@+id/changePasswordButton"
            android:icon="@drawable/ic_change_password"
            android:title="@string/change_password"/>
        <item
            android:id="@+id/helpButton"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>
        <item
            android:id="@+id/aboutButton"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
        <item
            android:id="@+id/logoutButton"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>