<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/fillText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/questions_and_answers_header"
        android:textColor="#F8F8F8"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/question"
        android:layout_width="500dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@id/fillText"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:hint="@string/question"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/question"
        android:layout_centerHorizontal = "true"
        android:text="@string/_1"
        android:layout_marginTop="5dp"
        android:textColor="#F8F8F8"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/correctAnswer"
        android:layout_width="480dp"
        android:layout_height="64dp"
        android:layout_below = "@id/questionNumber"
        android:layout_centerHorizontal = "true"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/correct_answer"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/falseAnswer1"
        android:layout_width="480dp"
        android:layout_height="64dp"
        android:layout_below = "@id/correctAnswer"
        android:layout_centerHorizontal = "true"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:hint="@string/false_answer_1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/falseAnswer2"
        android:layout_width="480dp"
        android:layout_height="64dp"
        android:layout_below = "@id/falseAnswer1"
        android:layout_centerHorizontal = "true"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:hint="@string/false_answer_2"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/falseAnswer3"
        android:layout_width="480dp"
        android:layout_height="64dp"
        android:layout_below = "@id/falseAnswer2"
        android:layout_centerHorizontal = "true"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:hint="@string/false_answer_3"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/quit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/falseAnswer3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/quit" />

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below = "@id/falseAnswer3"
        android:layout_alignParentRight ="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/next" />


</RelativeLayout>