<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_top_corner"
        android:gravity="center"
        android:text="About"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/text_big"
        android:textStyle="bold" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:paddingTop="25dp"
        android:text="@string/about_us_text"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/text_small" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:paddingTop="20dp"
        android:text="@string/Developers"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/text_small" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:paddingTop="0dp"
        android:text="@string/underscore"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:paddingTop="0dp"
        android:text="@string/konstantin"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:text="@string/kurt"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:text="@string/justin"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:text="@string/jeffrey"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary" />

</LinearLayout>