<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quiz_menu_linear_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/quiz_menu_title"
        android:textColor="@color/colorPrimary"
        android:textSize="48dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/quiz_menu_button_start"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/start_quiz"
        android:layout_marginBottom="10dp"
        style="@style/Button.Center.Primary"
        />

    <Button
        android:id="@+id/quiz_menu_button_delete"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_quiz"
        style="@style/Button.Center.Primary"
        />
    <Button
        android:id="@+id/quiz_menu_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/cancel_lowercase"
        style="@style/Button.Center.Primary"
        />

</LinearLayout>